Fixing overflow warp issue.

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -156,5 +156,9 @@ input[type="range"] {
 }
 .custom-list-item {
     margin-left: 0.2rem; /* Adjust the margin value as needed */
-  }
+}
   
+
+.wrapWords {
+    overflow-wrap: anywhere !important; 
+}
